fixed missing color variable

--- a/src/features/account/components/AccountHeader.scss
+++ b/src/features/account/components/AccountHeader.scss
@@ -3,7 +3,7 @@
 
 .account-header {
     width: 100%;
-    background-color: #eff8f3;
+    background-color: $green10;
     font-family: 'PT Sans';
     align-items: center;
 
